# cartesio_collision_avoidance

./: .gitignore  CMakeLists.txt  README.md  package.xml
docker/: Dockerfile  build.sh  run.sh
launch/: cartesio.launch  obstacle_launcher.launch  pointcloud_to_mesh_launcher.launch  tf_fix_launcher.launch
src/: mesh_to_planning.py  pointcloud_to_mesh.cpp  pointcloud_to_mesh.py
