<?xml version="1.0"?>
<package format="2">
  <name>cartesio_collision_avoidance</name>
  <version>0.0.0</version>
  <description>The cartesio_collision_avoidance package</description>

  <maintainer email="clemente.donoso@inria.fr">Clemente Donoso</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>